--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -80,7 +80,13 @@
       }
     },
     "eco-advices": {
-      "caption": "Эко советы"
+      "caption": "Эко советы",
+      "content": [
+        {"title": "Не ходите в магазин голодными. Составляйте список покупок заранее. Тогда вы потратите меньше и не купите лишнего, что потом нужно будет выбрасывать."},
+        {"title": "Самое первое и самое простое - отказаться от упакованных продуктов. Покупая овощи или фрукты, я не беру пакеты, а пользуюсь многоразовыми сумками и судочками для влажных продуктов, таких как мясо или рыба."},
+        {"title": "Следует пытаться увеличивать долю растительной пищи в рационе, зато уменьшать употребление продуктов с консервантами, усилителями вкуса."},
+        {"title": "Посадите дерево и поддерживайте людей, которые сохраняют и защищают наши леса. Деревья поглощают тонну СО2 в течение своей жизни, очищая воздух."}
+      ]
     },
     "subscription": {
       "caption": "Получать интересные новости",
