--- a/src/assets/i18n/uk.json
+++ b/src/assets/i18n/uk.json
@@ -80,7 +80,13 @@
       }
     },
     "eco-advices": {
-      "caption": "Еко поради"
+      "caption": "Еко поради",
+      "content": [
+        {"title": "Не ходіть до магазину голодними. Складайте список покупок заздалегідь. Тоди ви витратите менше і не купите зайвого, що потім потрібно буде викидати"},
+        {"title": "Найперше і найпростіше − відмовитися від запакованих продуктів. Купуючи овочі чи фрукти, я не беру пакети, а користуюся багаторазовими торбами і судочками для вологих продуктів, таких як м’ясо чи риба."},
+        {"title": "Слід намагатись збільшувати частку рослинної їжі в раціоні, натомість зменшувати вживання продуктів із консервантами, посилювачами смаку."},
+        {"title": "Посадіть дерево і підтримуйте людей, які зберігають і захищають наші ліси. Дерева поглинають тонну СО2 протягом свого життя, очищуючи повітря"}
+      ]
     },
     "subscription": {
       "caption": "Отримувати цікаві новини",
